Fixed spacing

--- a/src/style.css
+++ b/src/style.css
@@ -131,8 +131,8 @@ h3.project-title {
 
 footer {
   background: #efefe8;
-  padding: 30px 50px;
-  height: 300px;
+  padding: 50px 50px;
+  height: 350px;
   margin-top: auto;
 }
 
